--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
+   "builds": [
+      { "src": "../src/main.ts", "use": "@vercel/node" }
+      { "src": "main.ts", "use": "@vercel/node" }
+   ],
   "routes": [
     {
       "src": "/(.*)",
