--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
    "builds": [
-      { "src": "../src/main.ts", "use": "@vercel/node" }
+      { "src": "../src/main.ts", "use": "@vercel/node" },
       { "src": "main.ts", "use": "@vercel/node" }
    ],
   "routes": [
