--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,18 @@
     "node-fetch": "2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
-    "winston": "^3.6.0"
+    "winston": "^3.6.0",
+    "axios": "^0.26.0",
+    "d3-axis": "^1.0.12",
+    "d3-scale": "^3.2.0",
+    "d3-selection": "^1.4.1",
+    "d3-shape": "^1.3.7",
+    "lodash": "^4.17.21",
+    "vite": "^2.8.0",
+    "vue": "^3.2.30",
+    "vue-router": "4",
+    "vue-tsc": "^0.31.2",
+    "dayjs": "^1.10.7" 
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
@@ -22,6 +33,24 @@
     "@types/koa-router": "^7.4.4",
     "@types/koa__cors": "^3.3.0",
     "@types/lru-cache": "^5.1.1",
-    "@types/node": "^17.0.43"
+    "@types/node": "^17.0.43",
+    "@types/chrome": "^0.0.171",
+    "@types/d3-axis": "^1.0.12",
+    "@types/d3-scale": "^3.2.0",
+    "@types/d3-selection": "^1.4.1",
+    "@types/d3-shape": "^1.3.7",
+    "@types/lodash": "^4.14.182",
+    "@types/marked": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.1.1",
+    "postcss": "^8.4.5",
+    "prettier": "^2.4.1"
   }
 }
